@@ -1,30 +1,28 @@
 
 mtool = context.portal_membership
-catalog = context.portal_catalog
-
 if mtool.isAnonymousUser():
     return []
 
+member = mtool.getAuthenticatedMember()
+
+query = {
+     'modified': member.last_login_time,
+     'modified_usage': 'range:min',
+     'sort_on': 'modified',
+     'sort_order': 'reverse',
+     'review_state': 'published',
+     }
+
+brains = context.portal_catalog(**query)
+
 recent=[]
 
-member = mtool.getAuthenticatedMember()
-if hasattr(member, 'last_login_time'):
-    last_login_time = member.last_login_time
+for brain in brains[:5]:
+    obj = brain.getObject()
+    recent.append(
+        {'title': brain['Title'],
+         'url': brain.getURL(),
+         'icon': obj.getIcon(),
+        })
 
-    results = catalog.searchResults(modified=last_login_time,
-                                    modified_usage='range:min',
-                                    sort_on='modified',
-                                    sort_order='reverse',
-                                    review_state='published',
-                                   )
-    for o in results[:5]:
-        url=o.getURL()
-        title=''
-        if o.Title:
-            title=o.Title
-        else:
-            title=o.getId
-        recent.append( {'title':title
-                       ,'url':url
-                       ,'icon':o.getIcon} )
 return recent
