@@ -23,3 +23,4 @@ New internal features:
   the Image Box Templet (e.g. Accelarated HTTP Cache Manager)
 - local themes can be set at the portal root
 - Switched to the XHTML Strict doctype under CPS3.
+- Using the same cpsskins_RecentDocuments.py for both CPS3 and CMF.
